--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -5,7 +5,7 @@
         
 
              <div class="row">
-                 <h3>  2 items in your cart</h3>
+                 <h3>  {{products.length}} items in your cart</h3>
              </div>
         
        </div> 
@@ -31,48 +31,35 @@
                            
                         </tr>
                     </thead>
-                    <tbody>
-                          <tr>
-                            <td><img src="images/thumb/Kiran-3_800x604.jpg" style="width: 25%"> </td>
-                            <td>Beginning</td>
-                           
-                            <td> available</td>
-                            <td><a href="login.html"></a> </td>
+                    <tbody >
+                          <tr *ngFor="let prod of products">
+                            <td><img src="{{prod.image}}" style="width: 25%"> </td>
+                            <td>{{prod.Name}}</td>
+                            
+                            <td> {{prod.availability}}</td>
+                            <td></td>
                             <!-- <td><input class="form-control" type="text" value="1" ></td> -->
-                            <td class="text-right">Rs.1,50,000.00</td>
-                            <td class="text-right"><button class="btn btn-sm btn-danger">
-                                <i class="fa fa-trash"></i> 
-                            </button> </td>
-                        </tr>
-                        <tr>
-                            <td><img src="images/thumb/smallRicksaw.png" style="width: 25%" > </td>
-                            <td>Hardworking Nepali </td>
-                            <td> 1 piece only </td>
-                            <td><a href="login.html"></a> </td>
-                            <td class="text-right">Rs.3,550.00</td>
-                            <td class="text-right"><button class="btn btn-sm btn-danger">
-                                <i class="fa fa-trash"></i> 
+                            <td class="text-right">{{prod.price}}</td>
+                            <td class="text-right"><button id = "{{prod.id}}" class="btn btn-sm btn-danger"   (click)= "removeFromCart($event)">
+                                <i  id = "{{prod.id}}" class="fa fa-trash"></i> 
                             </button> </td>
                         </tr>
                       
-
-                        
                         <tr>
                             <td></td>
                             <td></td>
                             <td></td>
                             <td></td> 
                             <td>Sub-Total</td>
-                            <td class="text-right">Rs.1,53,500.00</td>
+                            <td class="text-right">Rs.{{subTotal}}</td>
                         </tr>
                         <tr>
                             <td></td>
                             <td></td>
                             <td></td>
-
                             <td></td>
                             <td>Shipping</td>
-                            <td class="text-right">Rs.200.00</td>
+                            <td class="text-right">Rs.{{shipping}}</td>
                         </tr>
                         <tr>
                             <td></td>
@@ -80,7 +67,7 @@
                             <td></td>
                             <td></td>
                             <td><strong>Total</strong></td>
-                            <td class="text-right"><strong>Rs.1,57,050.00</strong></td>
+                            <td class="text-right"><strong>Rs.{{subTotal + shipping}}</strong></td>
                         </tr>
                         
                     </tbody>
@@ -98,3 +85,4 @@
 
 
 </div>
+<app-footer></app-footer>
