--- a/src/app/product-view/product-view.component.html
+++ b/src/app/product-view/product-view.component.html
@@ -162,7 +162,7 @@
             </a>
             </div>
           </div>
-          <a href="#" class="btn " *ngIf="i == 4" > Show more</a>
+          <!-- <a href="#" class="btn " *ngIf="i == 4" > Show more</a> -->
         </div>   
         </div>                        
 
