--- a/src/app/profile-page/profile-page.component.html
+++ b/src/app/profile-page/profile-page.component.html
@@ -74,19 +74,19 @@
                                     <div class="product-page-single">
                                         <div class="single-product-item">
                                             <div class="product-image-wrap">
-                                                <a href="#"><img class="prodImage" src="{{product.image}}" alt="Product image"></a>
+                                                <a><img class="prodImage" src="{{product.image}}" alt="Product image"></a>
                                                 <div class="product-detail-inner">
                                                     <div class="item-details-overly-info">
                                                         <ul class="list-inline list-unstyled">
-                                                            <li class="item-add-to-cart"><a href="#" title="Add To Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                                                            <li class="item-wishlist"><a href="#" title="Wish list"><i class="fa fa-heart-o"></i></a></li>
+                                                            <li class="item-add-to-cart"><a  title="Add To Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                                                            <li class="item-wishlist"><a  title="Wish list"><i class="fa fa-heart-o"></i></a></li>
                                                           
                                                         </ul>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="product-item-details">
-                                                <h2><a href="#">{{product.Name}}</a><br>{{fullName}}</h2>
+                                                <h2><a (click)="viewProductDetail($event)" id="{{product.id}}">{{product.Name}}</a><br>{{fullName}}</h2>
                                                  
                                                 <div class="price-like-box">
                                                     <div class="pull-left item-price">
