cart and payment changes

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -65,7 +65,7 @@
                     </table>
                     <a href="demo.html" class="pull-left"><strong>Keep Shopping</strong></a>
                     <div class="pull-right">
-                        <a href="paymentForm.html"><button name="button" class="button">Proceed For Payment</button></a>
+                        <a href="payment-form.html"><button name="button" class="button">Proceed For Payment</button></a>
                     </div>
                 </div>
                               
