--- a/src/app/payment-form/payment-form.component.html
+++ b/src/app/payment-form/payment-form.component.html
@@ -15,20 +15,21 @@
  </div>
 </div>
 
-<form [formGroup]="paymentForm" (ngSubmit)="onSubmit()">
-  <ul id="progressbar">
-    <li class="active">User Information</li>
-  <!--  <li>Coupon </li> -->
-    <li>Billing Methods</li>
-    <li>Billing Recheck</li>
-    <!-- <li>Retention</li> -->
-  </ul>
-</form>
+<main>
 
+  <input id="tab1" type="radio" name="tabs" checked>
+  <label for="tab1">User Information</label>
 
+  <input id="tab2" type="radio" name="tabs">
+  <label for="tab2">Billing Methods</label>
 
-<!-- USER INFORMATION FIELD SET --> 
-  <fieldset>
+  <input id="tab3" type="radio" name="tabs">
+  <label for="tab3">Billing recheck</label>
+
+ 
+
+  <section id="content1">
+    <fieldset>
     <h2 class="fs-title">Basic Information</h2>
     <h3 class="fs-subtitle">We just need some basic information to proceed your payment method</h3>
   
@@ -137,218 +138,33 @@
   <input type="button" data-page="1" name="next" class="next action-button" value="Next" />
   <div class="explanation btn btn-small modal-trigger" data-modal-id="modal-3"><i class="question-log fa fa-question-circle"></i> What Is This?</div>
   </fieldset>
+  </section>
 
-  <fieldset>
-    <h2 class="fs-title">Billing Methods </h2>
-    <h3 class="fs-subtitle">Choose any one Paying Methods</h3>
-    
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingTwo">
-      <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"><input type="radio" name="choice">
-        Cash on Delivery
-        </a>
-      </h4>
-    </div>
-    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-      <div class="panel-body">
-        
-        Simply,Pay with cash upon delivery.
-      </div>
-    </div>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingTwo">
-      <h4 class="panel-title">
-      <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree"><input type="radio" name="choice">
-        Local e-Payments Methods
-        </a>
-      </h4>
-    </div>
-    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-      <div class="panel-body">
-        
-        Simply,Pay through eSewa or Khalti.
-      </div>
-    </div>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingTwo">
-      <h4 class="panel-title">
-      <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseThree"><input type="radio" name="choice">
-        Pay with Cards
-        </a>
-      </h4>
-    </div>
-    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-      
+  <section id="content2">
+    <p>
+      Bacon ipsum dolor sit amet landjaeger sausage brisket, jerky drumstick fatback boudin.
+    </p>
+    <p>
+      Jerky jowl pork chop tongue, kielbasa shank venison. Capicola shank pig ribeye leberkas filet mignon brisket beef kevin tenderloin porchetta. Capicola fatback venison shank kielbasa, drumstick ribeye landjaeger beef kevin tail meatball pastrami prosciutto pancetta. Tail kevin spare ribs ground round ham ham hock brisket shoulder. Corned beef tri-tip leberkas flank sausage ham hock filet mignon beef ribs pancetta turkey.
+    </p>
+  </section>
 
+  <section id="content3">
+    <p>
+      Jerky jowl pork chop tongue, kielbasa shank venison. Capicola shank pig ribeye leberkas filet mignon brisket beef kevin tenderloin porchetta. Capicola fatback venison shank kielbasa, drumstick ribeye landjaeger beef kevin tail meatball pastrami prosciutto pancetta. Tail kevin spare ribs ground round ham ham hock brisket shoulder. Corned beef tri-tip leberkas flank sausage ham hock filet mignon beef ribs pancetta turkey.
+    </p>
+    <p>
+      Bacon ipsum dolor sit amet landjaeger sausage brisket, jerky drumstick fatback boudin.
+    </p>
+  </section>
 
+  <section id="content4">
+    <p>
+      Bacon ipsum dolor sit amet landjaeger sausage brisket, jerky drumstick fatback boudin.
+    </p>
+    <p>
+      Jerky jowl pork chop tongue, kielbasa shank venison. Capicola shank pig ribeye leberkas filet mignon brisket beef kevin tenderloin porchetta. Capicola fatback venison shank kielbasa, drumstick ribeye landjaeger beef kevin tail meatball pastrami prosciutto pancetta. Tail kevin spare ribs ground round ham ham hock brisket shoulder. Corned beef tri-tip leberkas flank sausage ham hock filet mignon beef ribs pancetta turkey.
+    </p>
+  </section>
 
-
-
-
-
-    <div class="hs_firstname field hs-form-field">
-          
-            
-                          <h3 class="text-center">Payment Details</h3>
-                          <img class="img-responsive cc-img" src="http://www.prepbootstrap.com/Content/images/shared/misc/creditcardicons.png">
-                      
-
-                                <div class="form-group">
-                                      <label>CARD NUMBER</label>
-                                      <div class="input-group">
-                                          <input type="tel" class="form-control" placeholder="Valid Card Number" />
-                                          <span class="input-group-addon"><span class="fa fa-credit-card"></span></span>
-                                      </div>
-                                  </div>
-
-                                  <div class="form-group">
-                                      <label><span class="hidden-xs">EXPIRATION</span><span class="visible-xs-inline">EXP</span> DATE</label>
-                                      <input type="tel" class="form-control" placeholder="MM / YY" />
-                                  </div>
-
-
-                                  <div class="form-group">
-                                      <label>CV CODE</label>
-                                      <input type="tel" class="form-control" placeholder="CVC" />
-                                  </div>
-
-
-
-                                  <div class="form-group">
-                                      <label>CARD OWNER</label>
-                                      <input type="text" class="form-control" placeholder="Card Owner Names" />
-                                  </div>
-
-
-    </div>
-    </div>
-  </div>
-
-  <div class="hs_firstname field hs-form-field">
-        
-          <label for="firstname-99a6d115-5e68-4355-a7d0-529207feb0b3_2983"> Order Note</label>
-
-          <textarea id="firstname-99a6d115-5e68-4355-a7d0-529207feb0b3_2983" name="firstname" required="required" type="text" value="" placeholder="" data-rule-required="true" data-msg-required="" > Place you sweet message or any notes on delivery  </textarea>
-          <span class="error1" style="display: none;">
-              <i class="error-log fa fa-exclamation-triangle"></i>
-          </span>
-  </div>
-
-        <!-- End Average Gift Size Perchent Change Field -->
-    <input type="button" data-page="2" name="previous" class="previous action-button" value="Previous" />
-    <input type="button" data-page="2" name="next" class="next action-button" value="Next" />
-    <div class="explanation btn btn-small modal-trigger" data-modal-id="modal-3">What Is This?</div>
-  </fieldset>
-
-
-
-<!-- Cultivation2 FIELD SET --> 
-<fieldset>
-  <h2 class="fs-title">Billing Review</h2>
-  <h3 class="fs-subtitle">Finalize the Payment </h3>
-
-
-  <div class="container">
-    <div class="row">
-        <div class="col-md-5">
-            <div class="table-responsive">
-              <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="col">Arts </th>
-                            <th scope="col">Product</th>
-                            <th scope="col">Available</th>
-                            <th scope="col" style="width:10%"></th>
-                            <th scope="col" class="text-right">Price</th>
-                          
-                        </tr>
-                    </thead>
-                    <tbody>
-                          <tr>
-                            <td><img src="images/thumb/Kiran-3_800x604.jpg" style="width: 150%"> </td>
-                            <td>Beginning</td>
-                          
-                            <td> available</td>
-                            <td><a href="login.html"></a> </td>
-                            <!-- <td><input class="form-control" type="text" value="1" ></td> -->
-                            <td class="text-right">Rs.1,50,000.00</td>
-                            <td class="text-right"><button class="btn btn-sm btn-danger">
-                                <i class="fa fa-trash"></i> 
-                            </button> </td>
-                        </tr>
-                        <tr>
-                            <td><img src="images/thumb/smallRicksaw.png" style="width: 150%" > </td>
-                            <td>Hardworking Nepali </td>
-                            <td> 1 piece only </td>
-                            <td><a href="login.html"></a> </td>
-                            <td class="text-right">Rs.3,550</td>
-                            <td class="text-right"><button class="btn btn-sm btn-danger">
-                                <i class="fa fa-trash"></i> 
-                            </button> </td>
-                        </tr>
-                      
-
-                        
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td> 
-                            <td>Sub-Total</td>
-                            <td class="text-right">Rs.1,53,500.00</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-
-                            <td></td>
-                            <td>Shipping</td>
-                            <td class="text-right">Rs.200</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td><strong>Total</strong></td>
-                            <td class="text-right"><strong>Rs.1,53,700.00</strong></td>
-                        </tr>
-                        
-                    </tbody>
-
-                </table>
-
-            </div>
-        </div>
-
-
-    </div>
-  
-
-  </div>
-
-
-
-
-
-
-            <!-- Begin Total Giving In Year 1 Field -->
-    <div class="form-item webform-component webform-component-textfield" id="webform-component-cultivation--amount-3 hs_total_giving_in_year_1 field hs-form-field">
-      
-        <label for=" edit-submitted-cultivation-amount-3 total_giving_in_year_1-99a6d115-5e68-4355-a7d0-529207feb0b3_4902">Payment Method choosen : Simply going  to Pay with cash upon delivery.
-        </label>
-
-        
-        <span class="error1" style="display: none;">
-            <i class="error-log fa fa-exclamation-triangle"></i>
-        </span>
-    </div>
-     
-  <input type="button" data-page="3" name="previous" class="previous action-button" value="Previous" />
-  <input type="button" data-page="3" name="next"  class="next action-button"  value="Place Order" />
-  <div class="explanation btn btn-small modal-trigger" data-modal-id="modal-3">What Is This?</div>
-</fieldset>
+</main>
