--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,6 +1,6 @@
 <div class="container" >
   <div class="row" >
-<div class="square-card" *ngFor="let product of products" style="background-color: white">
+<div class="square-card" *ngFor="let product of products" style="background-color: white;">
   <a alt="square card" style="display: block;">
 
     <div class="product-page-single">
@@ -13,7 +13,7 @@
       
           </div>
           <div class="product-item-details">
-              <h2><a (click)="viewProductDetail($event)"><strong id ="{{product.products.id}}" style="cursor: pointer">{{product.products.Name}}</strong></a></h2><br><h2>Availibility: {{product.products.availability}}</h2>
+              <h2><a (click)="viewProductDetail($event)"><strong id ="{{product.products.id}}" style="cursor: pointer; padding-bottom: 5%">{{product.products.Name}}</strong></a></h2><br><h2>Availibility: {{product.products.availability}}</h2>
                
               <div class="price-like-box">
                   <div class="pull-left item-price">
@@ -21,14 +21,15 @@
                       <span class="current-price">Price: {{product.products.price}}</span>
                   </div>
                   <br>
-                  <div class="row" style=" text-align: center; display:list-item">
-                   
-                     <button (click)="addToCart(product.productId)" name="button" class="button" style=" margin-right: 2%; "><span class="fa fa-cart-plus"></span>  Add to Cart</button>
-                    
-                     <button (click)="removeFromWishList(product.productId)" name="button" class="button" style=" background-color: rgba(217, 30, 24, 1); "><i class="fa fa-trash"></i>  Remove
-                      </button>
+                  
               </div>
-              </div>
+            
+                 <div style="width:100%; text-align:center; bottom:0; ">  
+                <button (click)="addToCart(product.productId)" name="button" class="button" style="width:100%; "><span class="fa fa-cart-plus"></span>  Add to Cart</button>
+               
+                <button (click)="removeFromWishList(product.productId)" name="button" class="button" style="width:100%; background-color: rgba(217, 30, 24, 1); "><i class="fa fa-trash"></i>  Remove
+                 </button>
+                </div>
           </div>
       </div>
   </div>
