--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -30,8 +30,8 @@
           </div>
 
           <div class="form-group">
-            <label for="phoneNumber">
-              <input type="number" name="phoneNumber" value="" class="form-control" formControlName="Phone" placeholder="Phone Number">
+            <label for="phoneNumber" style="height: 50px">
+              <input type="number" name="phoneNumber" value="" class="form-control" formControlName="Phone" placeholder="Phone Number" style="height: auto">
             </label>
           </div>
 
