--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -13,7 +13,7 @@
       
           </div>
           <div class="product-item-details">
-              <h2><a (click)="viewProductDetail($event)"><strong id ="{{product.products.id}}" style="cursor: pointer; padding-bottom: 5%">{{product.products.Name}}</strong></a></h2><br><h2>Availibility: {{product.products.availability}}</h2>
+              <h2><a (click)="viewProductDetail(product.products.id)"><strong id ="{{product.products.id}}" style="cursor: pointer; padding-bottom: 5%">{{product.products.Name}}</strong></a></h2><br><h2>Availibility: {{product.products.availability}}</h2>
                
               <div class="price-like-box">
                   <div class="pull-left item-price">
