phone number fix

--- a/src/app/admin/account-verification/account-verification.component.html
+++ b/src/app/admin/account-verification/account-verification.component.html
@@ -10,7 +10,7 @@
             <a>Email: {{ artist.email }}</a><br>
             <a>Expert: {{ artist.profile.expert }}</a><br>
             <a>Role: {{ artist.profile.role }}</a><br>
-            <a>Phone Number: {{ artist.phone }}</a><br>
+            <a>Phone Number: {{ artist.Phone }}</a><br>
           </p>
         
          
