--- a/src/app/admin/current-artist/current-artist.component.html
+++ b/src/app/admin/current-artist/current-artist.component.html
@@ -8,7 +8,7 @@
         <p class="card__text"> <a>Email: {{ artist.email }}</a><br>
             <a>Expert: {{ artist.profile.expert }}</a><br>
             <a>Role: {{ artist.profile.role }}</a><br>
-            <a>Phone Number: {{ artist.phone }}</a><br><br>
+            <a>Phone Number: {{ artist.Phone }}</a><br><br>
             <button (click)="setArtistOfWeek(artist.id)" class="card__button" style="cursor: pointer"><strong>Make Artist of Week</strong> </button>
           </p>
     </div>
