--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -96,7 +96,7 @@
                                       </div>
                                   </div>
                                   <div class="product-item-details">
-                                      <h2><a (click)="viewProductDetail($event)"><strong id ="{{prod.id}}" style="cursor: pointer">{{prod.Name}}</strong></a></h2><br><h2>{{prod.user.fullName}}</h2>
+                                      <h2><a (click)="viewProductDetail(prod.id)"><strong id ="{{prod.id}}" style="cursor: pointer">{{prod.Name}}</strong></a></h2><br><h2>{{prod.user.fullName}}</h2>
                                        
                                       <div class="price-like-box">
                                           <div class="pull-left item-price">
