--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,7 +26,7 @@
                   </a>
                   <div class="content" style="padding:0px">
                     <ul class="menu-col" *ngFor="let l of ls.subcategories ; let i = index" style=" list-style-type: none; padding-left:10%">
-                      <li><a id = "{{ls.subCategoryIds[i]}}" (click)="showProducts($event)"style="background:none; padding-left:0px !important; font-family:Georgia, 'Times New Roman', Times, serif">{{l}}</a></li>
+                      <li><a id = "{{ls.subCategoryIds[i]}}" (click)="showProducts($event)"style="background:none; padding-left:0px !important; font-family:Georgia, 'Times New Roman', Times, serif; cursor: pointer;">{{l}}</a></li>
 
                     </ul>
                   </div>
