--- a/src/app/all-products/all-products.component.html
+++ b/src/app/all-products/all-products.component.html
@@ -24,7 +24,7 @@
                                 </div>
                             </div>
                             <div class="product-item-details">
-                                <h2><a (click)="viewProductDetail($event)"><strong id ="{{prod.id}}" >{{prod.Name}}</strong></a></h2><br><h2>{{prod.user.fullName}}</h2>
+                                <h2><a (click)="viewProductDetail($event)"><strong id ="{{prod.id}}" style="cursor: pointer" >{{prod.Name}}</strong></a></h2><br><h2>{{prod.user.fullName}}</h2>
                                  
                                 <div class="price-like-box">
                                     <div class="pull-left item-price">
