image issue of product-detail page fix

--- a/src/app/product-view/product-view.component.html
+++ b/src/app/product-view/product-view.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row" *ngIf="productDetails">
     <div class="col-md-6" order="1">
         <br><br>
         <div class="mag watermarked" >
