No items in cart issue fixed

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,4 +1,7 @@
-<div class="login-page">
+<div class="login-page" *ngIf="products.length < 1">
+    <h2>No Items in Cart Yet!</h2>
+</div>
+<div class="login-page" *ngIf="products.length > 0">
     <div class="banner">Upload<strong> Product</strong></div>
        
     <!-- </section> -->
