[WIP] feature customized art

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link" href="#"><strong>Home</strong> <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"><strong>Customized Arts</strong></a>
+          <a class="nav-link" routerLink="customizedart"><strong>Customized Arts</strong></a>
         </li>
         <li class="nav-item dropdown megamenu-fw">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" style="background:none"><strong>Categories</strong></a>
