--- a/src/app/customized-art/customized-art.component.html
+++ b/src/app/customized-art/customized-art.component.html
@@ -17,18 +17,18 @@
     <div class="form">
       <form [formGroup]="customArtForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
-          <label for="instruction"> <strong>Instruction </strong>
-            <input type="text" name="instruction" class="form-control" value="" formControlName="instruction"
+          <label for="description"> <strong>Description </strong>
+            <input type="text" name="description" class="form-control" value="" formControlName="description"
               placeholder="Describe your art...">
           </label>
         </div>
-        <div *ngIf="instruction.invalid && (instruction.dirty || instruction.touched)" class="alert alert-danger">
-          Instruction is required
+        <div *ngIf="description.invalid && (description.dirty || description.touched)" class="alert alert-danger">
+          description is required
         </div>
 
         <div class="form-group">
-          <label for="referenceArt"> <strong>Upload reference Art</strong>
-            <input type="file" name="referenceArt" value="" class="form-control" formControlName="referenceArt"
+          <label for="image"> <strong>Upload reference Art</strong>
+            <input type="file" name="image" accept="image/*" value="" class="form-control form-control-file" formControlName="image" (change)="onProductSelect($event)"
               placeholder="Select reference art">
           </label><br>
           <span>Upload sample as referece for Artist</span>
@@ -37,7 +37,7 @@
         <div class="form-group">
           <label for="preferredArtistName"> <strong> Select your preferred artist if any</strong>
             <input type="text" name="preferredArtistName" value="" class="form-control" formControlName="preferredArtistName"
-              placeholder="Select your preferred artist">
+               [ngbTypeahead]="search">
           </label><br>
           <span>Send us your prefered artist name</span>
         </div>
@@ -56,6 +56,61 @@
         </div>
 
         <div class="form-group">
+          <label for="address_line_1"> <strong> Address Line 1</strong>
+            <input type="text" name="address_line_1" value="" class="form-control" formControlName="address_line_1"
+              placeholder="">
+          </label><br>
+        </div>
+
+
+        <div class="form-group">
+          <label for="address_line_2"> <strong> Address Line 2</strong>
+            <input type="text" name="address_line_2" value="" class="form-control" formControlName="address_line_2"
+              placeholder="">
+          </label><br>
+        </div>
+
+        <div class="form-group">
+          <label for="country"> <strong> Country</strong>
+            <input type="text" name="country" value="" class="form-control" formControlName="country" placeholder="">
+          </label><br>
+        </div>
+
+        <div class="form-group">
+          <label for="city"> <strong> City</strong>
+            <input type="text" name="city" value="" class="form-control" formControlName="city" placeholder="">
+          </label><br>
+        </div>
+
+        <div class="form-group">
+          <label for="province"> <strong> Province</strong>
+            <input type="text" name="province" value="" class="form-control" formControlName="province" placeholder="">
+          </label><br>
+        </div>
+
+        <div class="form-group">
+          <label for="postal_code"> <strong> Postal code</strong>
+            <input type="number" name="postal_code" value="" class="form-control" formControlName="postal_code"
+              placeholder="">
+          </label><br>
+        </div>
+
+        <div class="form-group">
+          <label for="alt_phone"> <strong> Alt Phone</strong>
+            <input type="number" name="alt_phone" value="" class="form-control" formControlName="alt_phone" placeholder="">
+          </label><br>
+        </div>
+
+
+        <div class="form-group">
+          <label for="alt_address"> <strong> Alt address</strong>
+            <input type="text" name="alt_address" value="" class="form-control" formControlName="alt_address"
+              placeholder="">
+          </label><br>
+        </div>
+
+
+        <!-- <div class="form-group">
           <label for="deliveryDeadline"><strong>Delivery Deadline</strong>
             <select class="form-control" formControlName="deliveryDeadline" style="height:50px">
               <option value="no" [selected]="true">No</option>
@@ -78,16 +133,27 @@
           <br>
           <span>**A delivery deadline may reduce the pool of interested artists. For maximum quality, select the latest
             possible date.**</span>
-        </div>
+        </div> -->
 
         <button type="submit" class="btn btn-success btn-flat m-b-30 m-t-30" name="button" [disabled]="!customArtForm.valid">Submit
           request</button>
 
       </form>
-
     </div>
-
   </div>
-
-
 </div>
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Success!</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p>Your request is being processed!</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark"   (click)="modal.close('Save click'); ">OK</button>
+  </div>
+</ng-template>
